export const snapshot = {};

snapshot[`generateTailscaleExtensionModel - webhook 1`] = `
"// Auto-generated extension model for @swamp/tailscale/webhook
// Do not edit manually. Re-generate with: deno task generate:tailscale

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for a Tailscale webhook.
 *
 * A Tailscale webhook endpoint that receives tailnet events. The signing
 * secret is returned only by create and rotate_secret and is stored in the
 * \`secret\` resource.
 *
 * Methods: \`create\`, \`get\`, \`update\`, \`delete\`, \`sync\`, \`list\`, \`adopt\`, \`test\`, \`rotate_secret\`.
 *
 * @module
 */

import { z } from \\"npm:zod@4.3.6\\";
import { apiRequest, expandPath, instanceName, omit, pickDefined, pickPresent, readOptional, readStored, readRequired, requireArgs, requireStored, unwrapList } from \\"./_lib/tailscale.ts\\";

const GlobalArgsSchema = z.object({
  name: z.string().describe(\\"Instance name for this webhook, used as the unique identifier in the factory pattern\\"),
  endpointUrl: z.string().optional(),
  providerType: z.enum([\\"slack\\",\\"discord\\"]).optional(),
  subscriptions: z.array(z.string()).optional(),
  apiKey: z.string().meta({ sensitive: true }).describe(\\"Tailscale API access token. Overrides the TAILSCALE_API_KEY environment variable. Wire with a vault.get(...) expression.\\").optional(),
  oauthClientId: z.string().describe(\\"OAuth client ID, used with oauthClientSecret instead of an API key. Overrides TAILSCALE_OAUTH_CLIENT_ID.\\").optional(),
  oauthClientSecret: z.string().meta({ sensitive: true }).describe(\\"OAuth client secret. Overrides TAILSCALE_OAUTH_CLIENT_SECRET. Wire with a vault.get(...) expression.\\").optional(),
  oauthScopes: z.array(z.string()).describe(\\"Scopes to request when exchanging the OAuth client credentials; defaults to all of the client's scopes.\\").optional(),
  tailnet: z.string().describe(\\"Tailnet ID. Defaults to TAILSCALE_TAILNET, then '-' (the tailnet of the credential in use).\\").optional(),
  baseUrl: z.string().describe(\\"Tailscale API base URL. Defaults to TAILSCALE_BASE_URL, then https://api.tailscale.com.\\").optional(),
});

const ResourceSchema = z.object({
  endpointId: z.string().optional(),
  endpointUrl: z.string().optional(),
  providerType: z.string().optional(),
  subscriptions: z.array(z.string()).optional(),
}).passthrough();

const SecretSchema = z.object({
  secret: z.string().meta({ sensitive: true }).optional(),
});

const InputsSchema = z.object({
  name: z.string().optional(),
  endpointUrl: z.string().optional(),
  providerType: z.enum([\\"slack\\",\\"discord\\"]).optional(),
  subscriptions: z.array(z.string()).optional(),
});

/** Swamp extension model for a Tailscale webhook. Registered at \`@swamp/tailscale/webhook\`. */
export const model = {
  type: \\"@swamp/tailscale/webhook\\",
  version: \\"2026.01.01.1\\",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: \\"Webhook state\\",
      schema: ResourceSchema,
      lifetime: \\"infinite\\",
      garbageCollection: 10,
    },
    secret: {
      description: \\"Secrets returned only when the webhook is created (or its secret rotated). Stored in a vault.\\",
      schema: SecretSchema,
      lifetime: \\"infinite\\",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: \\"Create a webhook\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"endpointUrl\\",\\"subscriptions\\"], \\"create\\");
        // Refuse to orphan a live webhook this instance already tracks.
        const existing = await readStored(context, instanceName(g.name));
        // Gone: deleted, not found, or (for keys) revoked or invalid.
        if (existing && !existing.deletedAt && existing.status !== \\"not_found\\" && !existing.revoked && existing.invalid !== true) {
          throw new Error(\`Instance \${instanceName(g.name)} already tracks webhook \${existing.endpointId}. Delete it first, or use a different name.\`);
        }
        const body = { ...pickDefined(g, [\\"endpointUrl\\",\\"providerType\\",\\"subscriptions\\"]) };
        const resp = await apiRequest(g, \\"POST\\", expandPath(\\"/tailnet/{tailnet}/webhooks\\", g), { body });
        const result = resp.data as Record<string, unknown>;
        const dataHandles = [await context.writeResource(\\"state\\", instanceName(g.name, String(result.endpointId)), omit(result, [\\"secret\\"]))];
        const secret = pickPresent(result, [\\"secret\\"]);
        if (secret) dataHandles.push(await context.writeResource(\\"secret\\", \`secret-\${instanceName(g.name, String(result.endpointId))}\`, secret));
        return { dataHandles };
      },
    },
    get: {
      description: \\"Get a webhook by ID\\",
      arguments: z.object({ id: z.string().describe(\\"The webhook's ID\\") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const result = await readRequired(g, expandPath(\\"/webhooks/{endpointId}\\", g, { endpointId: args.id }));
        // Write to the tracked instance only when it is this resource (or tracks
        // nothing live); otherwise keep it apart, as list does. adopt re-targets.
        const tracked = await readStored(context, instanceName(g.name));
        const tracksOther = tracked && tracked.endpointId !== result.endpointId && !tracked.deletedAt && tracked.status !== \\"not_found\\" && !tracked.revoked && tracked.invalid !== true;
        const name = tracksOther ? instanceName(\`item-\${args.id}\`) : instanceName(g.name, String(args.id));
        const handle = await context.writeResource(\\"state\\", name, omit(result, [\\"secret\\"]));
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: \\"Update the webhook from the global arguments\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const name = instanceName(g.name);
        const stored = await requireStored(context, name, \\"run create, get or adopt first\\");
        const body: Record<string, unknown> = { ...pickDefined(g, [\\"subscriptions\\"]) };
        await apiRequest(g, \\"PATCH\\", expandPath(\\"/webhooks/{endpointId}\\", g, { endpointId: stored.endpointId }), { body });
        const result = await readRequired(g, expandPath(\\"/webhooks/{endpointId}\\", g, { endpointId: stored.endpointId }));
        const handle = await context.writeResource(\\"state\\", name, omit(result, [\\"secret\\"]));
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: \\"Delete the webhook\\",
      arguments: z.object({ id: z.string().describe(\\"The webhook's ID; defaults to the stored webhook\\").optional() }),
      execute: async (args: { id?: string }, context: any) => {
        const g = context.globalArgs;
        const stored = await readStored(context, instanceName(g.name));
        const id = args.id ?? stored?.endpointId;
        if (id === undefined || id === null || id === \\"\\") throw new Error(\\"pass id, or run create, get or adopt first\\");
        // Record the deletion on the stored instance only when it is that resource;
        // another ID is recorded under item-<id>, as get and list write it, so the
        // stored resource stays tracked.
        const name = stored && stored.endpointId === id ? instanceName(g.name) : instanceName(\`item-\${id}\`);
        const resp = await apiRequest(g, \\"DELETE\\", expandPath(\\"/webhooks/{endpointId}\\", g, { endpointId: id }), { allowStatus: [404] });
        const existed = resp.status !== 404;
        const handle = await context.writeResource(\\"state\\", name, { endpointId: id, existed, status: existed ? \\"deleted\\" : \\"not_found\\", deletedAt: new Date().toISOString() });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: \\"Refresh the stored webhook from Tailscale\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const name = instanceName(g.name);
        const stored = await requireStored(context, name, \\"run create, get or adopt first\\");
        const result = await readOptional(g, expandPath(\\"/webhooks/{endpointId}\\", g, { endpointId: stored.endpointId }));
        if (!result) {
          const handle = await context.writeResource(\\"state\\", name, { endpointId: stored.endpointId, status: \\"not_found\\", syncedAt: new Date().toISOString() });
          return { dataHandles: [handle] };
        }
        const handle = await context.writeResource(\\"state\\", name, omit(result, [\\"secret\\"]));
        return { dataHandles: [handle] };
      },
    },
    list: {
      description: \\"List webhooks and write each to state\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const resp = await apiRequest(g, \\"GET\\", expandPath(\\"/tailnet/{tailnet}/webhooks\\", g));
        const items = unwrapList(resp.data, \\"webhooks\\");
        const dataHandles: any[] = [];
        for (const item of items) {
          const name = instanceName(\`item-\${item.endpointId}\`, \\"unknown\\");
          dataHandles.push(await context.writeResource(\\"state\\", name, omit(item, [\\"secret\\"])));
        }
        return { dataHandles };
      },
    },
    adopt: {
      description: \\"Adopt an existing webhook by ID into managed state\\",
      arguments: z.object({ id: z.string().describe(\\"The ID of the webhook to adopt\\") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const result = await readRequired(g, expandPath(\\"/webhooks/{endpointId}\\", g, { endpointId: args.id }));
        const handle = await context.writeResource(\\"state\\", instanceName(g.name, String(args.id)), omit(result, [\\"secret\\"]));
        return { dataHandles: [handle] };
      },
    },
    test: {
      description: \\"Send a test event to the webhook endpoint\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const name = instanceName(g.name);
        const stored = await requireStored(context, name, \\"run create, get or adopt first\\");
        const resp = await apiRequest(g, \\"POST\\", expandPath(\\"/webhooks/{endpointId}/test\\", g, { endpointId: stored.endpointId }));
        void resp;
        return { dataHandles: [] };
      },
    },
    rotate_secret: {
      description: \\"Rotate the webhook's signing secret and store the new secret\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const name = instanceName(g.name);
        const stored = await requireStored(context, name, \\"run create, get or adopt first\\");
        const resp = await apiRequest(g, \\"POST\\", expandPath(\\"/webhooks/{endpointId}/rotate\\", g, { endpointId: stored.endpointId }));
        const result = resp.data as Record<string, unknown>;
        const dataHandles = [await context.writeResource(\\"state\\", name, omit(result, [\\"secret\\"]))];
        const secret = pickPresent(result, [\\"secret\\"]);
        if (secret) dataHandles.push(await context.writeResource(\\"secret\\", \`secret-\${name}\`, secret));
        return { dataHandles };
      },
    },
  },
};
"
`;

snapshot[`generateTailscaleExtensionModel - tailnet_key 1`] = `
"// Auto-generated extension model for @swamp/tailscale/tailnet-key
// Do not edit manually. Re-generate with: deno task generate:tailscale

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for a Tailscale auth key.
 *
 * A Tailscale auth key, used to register new devices to the tailnet. Auth keys
 * cannot be changed after creation: to change one, delete it and create a new
 * one. The key value is returned only by create and is stored in the \`secret\`
 * resource. Deleting a key revokes it: Tailscale still returns it by ID,
 * marked revoked and invalid, so sync after delete records it that way rather
 * than as not found.
 *
 * Methods: \`create\`, \`get\`, \`delete\`, \`sync\`, \`list\`, \`adopt\`.
 *
 * @module
 */

import { z } from \\"npm:zod@4.3.6\\";
import { apiRequest, expandPath, instanceName, omit, pickDefined, pickPresent, readOptional, readStored, readRequired, requireStored, unwrapList } from \\"./_lib/tailscale.ts\\";

const GlobalArgsSchema = z.object({
  name: z.string().describe(\\"Instance name for this auth key, used as the unique identifier in the factory pattern\\"),
  description: z.string().optional(),
  capabilities: z.object({ devices: z.object({ create: z.object({ reusable: z.boolean().optional() }).optional() }).optional() }).optional(),
  expirySeconds: z.number().int().optional(),
  apiKey: z.string().meta({ sensitive: true }).describe(\\"Tailscale API access token. Overrides the TAILSCALE_API_KEY environment variable. Wire with a vault.get(...) expression.\\").optional(),
  oauthClientId: z.string().describe(\\"OAuth client ID, used with oauthClientSecret instead of an API key. Overrides TAILSCALE_OAUTH_CLIENT_ID.\\").optional(),
  oauthClientSecret: z.string().meta({ sensitive: true }).describe(\\"OAuth client secret. Overrides TAILSCALE_OAUTH_CLIENT_SECRET. Wire with a vault.get(...) expression.\\").optional(),
  oauthScopes: z.array(z.string()).describe(\\"Scopes to request when exchanging the OAuth client credentials; defaults to all of the client's scopes.\\").optional(),
  tailnet: z.string().describe(\\"Tailnet ID. Defaults to TAILSCALE_TAILNET, then '-' (the tailnet of the credential in use).\\").optional(),
  baseUrl: z.string().describe(\\"Tailscale API base URL. Defaults to TAILSCALE_BASE_URL, then https://api.tailscale.com.\\").optional(),
});

const ResourceSchema = z.object({
  id: z.string().optional(),
  keyType: z.string().optional(),
  description: z.string().optional(),
  expirySeconds: z.number().optional(),
  scopes: z.array(z.string()).optional(),
}).passthrough();

const SecretSchema = z.object({
  key: z.string().meta({ sensitive: true }).optional(),
});

const InputsSchema = z.object({
  name: z.string().optional(),
  description: z.string().optional(),
  capabilities: z.object({ devices: z.object({ create: z.object({ reusable: z.boolean().optional() }).optional() }).optional() }).optional(),
  expirySeconds: z.number().int().optional(),
});

/** Swamp extension model for a Tailscale auth key. Registered at \`@swamp/tailscale/tailnet-key\`. */
export const model = {
  type: \\"@swamp/tailscale/tailnet-key\\",
  version: \\"2026.01.01.1\\",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: \\"Auth key state\\",
      schema: ResourceSchema,
      lifetime: \\"infinite\\",
      garbageCollection: 10,
    },
    secret: {
      description: \\"Secrets returned only when the auth key is created (or its secret rotated). Stored in a vault.\\",
      schema: SecretSchema,
      lifetime: \\"infinite\\",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: \\"Create an auth key\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        // Refuse to orphan a live auth key this instance already tracks.
        const existing = await readStored(context, instanceName(g.name));
        // Gone: deleted, not found, or (for keys) revoked or invalid.
        if (existing && !existing.deletedAt && existing.status !== \\"not_found\\" && !existing.revoked && existing.invalid !== true) {
          throw new Error(\`Instance \${instanceName(g.name)} already tracks auth key \${existing.id}. Delete it first, or use a different name.\`);
        }
        const body = { ...{\\"capabilities\\":{\\"devices\\":{}}}, ...pickDefined(g, [\\"description\\",\\"capabilities\\",\\"expirySeconds\\"]), ...{\\"keyType\\":\\"auth\\"} };
        const resp = await apiRequest(g, \\"POST\\", expandPath(\\"/tailnet/{tailnet}/keys\\", g), { body });
        const result = resp.data as Record<string, unknown>;
        const dataHandles = [await context.writeResource(\\"state\\", instanceName(g.name, String(result.id)), omit(result, [\\"key\\"]))];
        const secret = pickPresent(result, [\\"key\\"]);
        if (secret) dataHandles.push(await context.writeResource(\\"secret\\", \`secret-\${instanceName(g.name, String(result.id))}\`, secret));
        return { dataHandles };
      },
    },
    get: {
      description: \\"Get an auth key by ID\\",
      arguments: z.object({ id: z.string().describe(\\"The auth key's ID\\") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const result = await readRequired(g, expandPath(\\"/tailnet/{tailnet}/keys/{keyId}\\", g, { keyId: args.id }));
        // Write to the tracked instance only when it is this resource (or tracks
        // nothing live); otherwise keep it apart, as list does. adopt re-targets.
        const tracked = await readStored(context, instanceName(g.name));
        const tracksOther = tracked && tracked.id !== result.id && !tracked.deletedAt && tracked.status !== \\"not_found\\" && !tracked.revoked && tracked.invalid !== true;
        const name = tracksOther ? instanceName(\`item-\${args.id}\`) : instanceName(g.name, String(args.id));
        const handle = await context.writeResource(\\"state\\", name, omit(result, [\\"key\\"]));
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: \\"Delete the auth key\\",
      arguments: z.object({ id: z.string().describe(\\"The auth key's ID; defaults to the stored auth key\\").optional() }),
      execute: async (args: { id?: string }, context: any) => {
        const g = context.globalArgs;
        const stored = await readStored(context, instanceName(g.name));
        const id = args.id ?? stored?.id;
        if (id === undefined || id === null || id === \\"\\") throw new Error(\\"pass id, or run create, get or adopt first\\");
        // Record the deletion on the stored instance only when it is that resource;
        // another ID is recorded under item-<id>, as get and list write it, so the
        // stored resource stays tracked.
        const name = stored && stored.id === id ? instanceName(g.name) : instanceName(\`item-\${id}\`);
        const resp = await apiRequest(g, \\"DELETE\\", expandPath(\\"/tailnet/{tailnet}/keys/{keyId}\\", g, { keyId: id }), { allowStatus: [404] });
        const existed = resp.status !== 404;
        const handle = await context.writeResource(\\"state\\", name, { id: id, existed, status: existed ? \\"deleted\\" : \\"not_found\\", deletedAt: new Date().toISOString() });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: \\"Refresh the stored auth key from Tailscale\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const name = instanceName(g.name);
        const stored = await requireStored(context, name, \\"run create, get or adopt first\\");
        const result = await readOptional(g, expandPath(\\"/tailnet/{tailnet}/keys/{keyId}\\", g, { keyId: stored.id }));
        if (!result) {
          const handle = await context.writeResource(\\"state\\", name, { id: stored.id, status: \\"not_found\\", syncedAt: new Date().toISOString() });
          return { dataHandles: [handle] };
        }
        const handle = await context.writeResource(\\"state\\", name, omit(result, [\\"key\\"]));
        return { dataHandles: [handle] };
      },
    },
    list: {
      description: \\"List auth keys and write each to state\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const resp = await apiRequest(g, \\"GET\\", expandPath(\\"/tailnet/{tailnet}/keys\\", g), { query: {\\"all\\":\\"true\\"} });
        const items = unwrapList(resp.data, \\"keys\\").filter((item) => item.keyType === \\"auth\\");
        const dataHandles: any[] = [];
        for (const item of items) {
          const name = instanceName(\`item-\${item.id}\`, \\"unknown\\");
          dataHandles.push(await context.writeResource(\\"state\\", name, omit(item, [\\"key\\"])));
        }
        return { dataHandles };
      },
    },
    adopt: {
      description: \\"Adopt an existing auth key by ID into managed state\\",
      arguments: z.object({ id: z.string().describe(\\"The ID of the auth key to adopt\\") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const result = await readRequired(g, expandPath(\\"/tailnet/{tailnet}/keys/{keyId}\\", g, { keyId: args.id }));
        const handle = await context.writeResource(\\"state\\", instanceName(g.name, String(args.id)), omit(result, [\\"key\\"]));
        return { dataHandles: [handle] };
      },
    },
  },
};
"
`;

snapshot[`generateTailscaleExtensionModel - service 1`] = `
"// Auto-generated extension model for @swamp/tailscale/service
// Do not edit manually. Re-generate with: deno task generate:tailscale

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for a Tailscale service.
 *
 * A Tailscale Service: a stable virtual IP and DNS name in front of one or
 * more hosting devices. create refuses to overwrite an existing service with
 * the same name; adopt it with get instead.
 *
 * Methods: \`create\`, \`get\`, \`update\`, \`delete\`, \`sync\`, \`list\`, \`list_devices\`, \`get_device_approval\`, \`set_device_approval\`.
 *
 * @module
 */

import { z } from \\"npm:zod@4.3.6\\";
import { apiRequest, expandPath, fillUnset, instanceName, pickDefined, readOptional, readRequired, requireArgs, unwrapList } from \\"./_lib/tailscale.ts\\";

const GlobalArgsSchema = z.object({
  name: z.string(),
  comment: z.string().optional(),
  addrs: z.array(z.string()).optional(),
  apiKey: z.string().meta({ sensitive: true }).describe(\\"Tailscale API access token. Overrides the TAILSCALE_API_KEY environment variable. Wire with a vault.get(...) expression.\\").optional(),
  oauthClientId: z.string().describe(\\"OAuth client ID, used with oauthClientSecret instead of an API key. Overrides TAILSCALE_OAUTH_CLIENT_ID.\\").optional(),
  oauthClientSecret: z.string().meta({ sensitive: true }).describe(\\"OAuth client secret. Overrides TAILSCALE_OAUTH_CLIENT_SECRET. Wire with a vault.get(...) expression.\\").optional(),
  oauthScopes: z.array(z.string()).describe(\\"Scopes to request when exchanging the OAuth client credentials; defaults to all of the client's scopes.\\").optional(),
  tailnet: z.string().describe(\\"Tailnet ID. Defaults to TAILSCALE_TAILNET, then '-' (the tailnet of the credential in use).\\").optional(),
  baseUrl: z.string().describe(\\"Tailscale API base URL. Defaults to TAILSCALE_BASE_URL, then https://api.tailscale.com.\\").optional(),
});

const ResourceSchema = z.object({
  name: z.string().optional(),
  comment: z.string().optional(),
  addrs: z.array(z.string()).optional(),
}).passthrough();

const InputsSchema = z.object({
  name: z.string().optional(),
  comment: z.string().optional(),
  addrs: z.array(z.string()).optional(),
});

/** Swamp extension model for a Tailscale service. Registered at \`@swamp/tailscale/service\`. */
export const model = {
  type: \\"@swamp/tailscale/service\\",
  version: \\"2026.01.01.1\\",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: \\"Service state\\",
      schema: ResourceSchema,
      lifetime: \\"infinite\\",
      garbageCollection: 10,
    },
    result: {
      description: \\"The response of the most recent run of each action that returns data\\",
      schema: z.record(z.string(), z.unknown()),
      lifetime: \\"infinite\\",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: \\"Create the service; fails if one already exists for name\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"name\\"], \\"create\\");
        // Advisory only: the PUT is an unconditional upsert, so two
        // concurrent creates can both pass this check and the later write wins.
        const existing = await readOptional(g, expandPath(\\"/tailnet/{tailnet}/services/{serviceName}\\", g, { serviceName: g.name }));
        if (existing) {
          throw new Error(\`A service already exists for name=\${g.name}. Run get to adopt it, then update.\`);
        }
        await apiRequest(g, \\"PUT\\", expandPath(\\"/tailnet/{tailnet}/services/{serviceName}\\", g, { serviceName: g.name }), { body: pickDefined(g, [\\"name\\",\\"comment\\",\\"addrs\\"]) });
        const result = await readRequired(g, expandPath(\\"/tailnet/{tailnet}/services/{serviceName}\\", g, { serviceName: g.name }));
        const handle = await context.writeResource(\\"state\\", instanceName(g.name), result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: \\"Get the service for name and write it to state\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"name\\"], \\"get\\");
        const result = await readRequired(g, expandPath(\\"/tailnet/{tailnet}/services/{serviceName}\\", g, { serviceName: g.name }));
        const handle = await context.writeResource(\\"state\\", instanceName(g.name), result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: \\"Update the service from the global arguments\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"name\\"], \\"update\\");
        // PUT replaces the service: keep the live value of unset fields.
        const live = await readRequired(g, expandPath(\\"/tailnet/{tailnet}/services/{serviceName}\\", g, { serviceName: g.name }));
        const body = fillUnset(pickDefined(g, [\\"name\\",\\"comment\\",\\"addrs\\"]), live, [\\"name\\",\\"comment\\",\\"addrs\\"]);
        await apiRequest(g, \\"PUT\\", expandPath(\\"/tailnet/{tailnet}/services/{serviceName}\\", g, { serviceName: g.name }), { body });
        const result = await readRequired(g, expandPath(\\"/tailnet/{tailnet}/services/{serviceName}\\", g, { serviceName: g.name }));
        const handle = await context.writeResource(\\"state\\", instanceName(g.name), result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: \\"Delete the service\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"name\\"], \\"delete\\");
        const resp = await apiRequest(g, \\"DELETE\\", expandPath(\\"/tailnet/{tailnet}/services/{serviceName}\\", g, { serviceName: g.name }), { allowStatus: [404] });
        const existed = resp.status !== 404;
        const handle = await context.writeResource(\\"state\\", instanceName(g.name), { name: g.name, existed, status: existed ? \\"deleted\\" : \\"not_found\\", deletedAt: new Date().toISOString() });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: \\"Refresh the service from Tailscale\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"name\\"], \\"sync\\");
        const result = await readOptional(g, expandPath(\\"/tailnet/{tailnet}/services/{serviceName}\\", g, { serviceName: g.name }));
        const handle = await context.writeResource(\\"state\\", instanceName(g.name), result ?? { name: g.name, status: \\"not_found\\", syncedAt: new Date().toISOString() });
        return { dataHandles: [handle] };
      },
    },
    list: {
      description: \\"List services and write each to state\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const resp = await apiRequest(g, \\"GET\\", expandPath(\\"/tailnet/{tailnet}/services\\", g));
        const items = unwrapList(resp.data, \\"vipServices\\");
        const dataHandles: any[] = [];
        for (const item of items) {
          dataHandles.push(await context.writeResource(\\"state\\", instanceName(item.name, \\"unknown\\"), item));
        }
        return { dataHandles };
      },
    },
    list_devices: {
      description: \\"List the devices hosting the service\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"name\\"], \\"list_devices\\");
        const resp = await apiRequest(g, \\"GET\\", expandPath(\\"/tailnet/{tailnet}/services/{serviceName}/devices\\", g, { serviceName: g.name }));
        const data = resp.data && typeof resp.data === \\"object\\" && !Array.isArray(resp.data) ? resp.data as Record<string, unknown> : { value: resp.data ?? null };
        const handle = await context.writeResource(\\"result\\", instanceName(\`result-\${g.name}-list_devices\`), data);
        return { dataHandles: [handle] };
      },
    },
    get_device_approval: {
      description: \\"Get whether a device is approved to host the service\\",
      arguments: z.object({ deviceId: z.string().describe(\\"The deviceId\\") }),
      execute: async (args: { deviceId?: string }, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"name\\"], \\"get_device_approval\\");
        const resp = await apiRequest(g, \\"GET\\", expandPath(\\"/tailnet/{tailnet}/services/{serviceName}/device/{deviceId}/approved\\", g, { serviceName: g.name, deviceId: args.deviceId }));
        const data = resp.data && typeof resp.data === \\"object\\" && !Array.isArray(resp.data) ? resp.data as Record<string, unknown> : { value: resp.data ?? null };
        const handle = await context.writeResource(\\"result\\", instanceName(\`result-\${g.name}-get_device_approval\`), data);
        return { dataHandles: [handle] };
      },
    },
    set_device_approval: {
      description: \\"Approve or unapprove a device to host the service\\",
      arguments: z.object({ deviceId: z.string().describe(\\"The deviceId\\"), approved: z.boolean().optional() }),
      execute: async (args: { deviceId?: string; approved?: boolean }, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"name\\"], \\"set_device_approval\\");
        const resp = await apiRequest(g, \\"POST\\", expandPath(\\"/tailnet/{tailnet}/services/{serviceName}/device/{deviceId}/approved\\", g, { serviceName: g.name, deviceId: args.deviceId }), { body: pickDefined(args, [\\"approved\\"]) });
        const data = resp.data && typeof resp.data === \\"object\\" && !Array.isArray(resp.data) ? resp.data as Record<string, unknown> : { value: resp.data ?? null };
        const handle = await context.writeResource(\\"result\\", instanceName(\`result-\${g.name}-set_device_approval\`), data);
        return { dataHandles: [handle] };
      },
    },
  },
};
"
`;

snapshot[`generateTailscaleExtensionModel - tailnet_settings 1`] = `
"// Auto-generated extension model for @swamp/tailscale/tailnet-settings
// Do not edit manually. Re-generate with: deno task generate:tailscale

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for a Tailscale tailnet settings.
 *
 * Tailnet-wide settings such as device approval, key expiry and HTTPS
 * certificates. Deleting the model leaves the settings as they are.
 *
 * Methods: \`create\`, \`get\`, \`update\`, \`delete\`, \`sync\`.
 *
 * @module
 */

import { z } from \\"npm:zod@4.3.6\\";
import { apiRequest, expandPath, pickDefined, readRequired } from \\"./_lib/tailscale.ts\\";

const GlobalArgsSchema = z.object({
  devicesApprovalOn: z.boolean().nullable().optional(),
  devicesKeyDurationDays: z.number().int().optional(),
  apiKey: z.string().meta({ sensitive: true }).describe(\\"Tailscale API access token. Overrides the TAILSCALE_API_KEY environment variable. Wire with a vault.get(...) expression.\\").optional(),
  oauthClientId: z.string().describe(\\"OAuth client ID, used with oauthClientSecret instead of an API key. Overrides TAILSCALE_OAUTH_CLIENT_ID.\\").optional(),
  oauthClientSecret: z.string().meta({ sensitive: true }).describe(\\"OAuth client secret. Overrides TAILSCALE_OAUTH_CLIENT_SECRET. Wire with a vault.get(...) expression.\\").optional(),
  oauthScopes: z.array(z.string()).describe(\\"Scopes to request when exchanging the OAuth client credentials; defaults to all of the client's scopes.\\").optional(),
  tailnet: z.string().describe(\\"Tailnet ID. Defaults to TAILSCALE_TAILNET, then '-' (the tailnet of the credential in use).\\").optional(),
  baseUrl: z.string().describe(\\"Tailscale API base URL. Defaults to TAILSCALE_BASE_URL, then https://api.tailscale.com.\\").optional(),
});

const ResourceSchema = z.object({
  devicesApprovalOn: z.boolean().nullable().optional(),
  devicesKeyDurationDays: z.number().optional(),
}).passthrough();

const InputsSchema = z.object({
  devicesApprovalOn: z.boolean().nullable().optional(),
  devicesKeyDurationDays: z.number().int().optional(),
});

/** Swamp extension model for a Tailscale tailnet settings. Registered at \`@swamp/tailscale/tailnet-settings\`. */
export const model = {
  type: \\"@swamp/tailscale/tailnet-settings\\",
  version: \\"2026.01.01.1\\",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: \\"Tailnet settings state\\",
      schema: ResourceSchema,
      lifetime: \\"infinite\\",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: \\"Apply the tailnet settings from the global arguments\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const body: Record<string, unknown> = pickDefined(g, [\\"devicesApprovalOn\\",\\"devicesKeyDurationDays\\"]);
        await apiRequest(g, \\"PATCH\\", expandPath(\\"/tailnet/{tailnet}/settings\\", g), { body });
        const result = await readRequired(g, expandPath(\\"/tailnet/{tailnet}/settings\\", g));
        const handle = await context.writeResource(\\"state\\", \\"current\\", result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: \\"Read the current tailnet settings into state\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const result = await readRequired(g, expandPath(\\"/tailnet/{tailnet}/settings\\", g));
        const handle = await context.writeResource(\\"state\\", \\"current\\", result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: \\"Apply the tailnet settings from the global arguments\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const body: Record<string, unknown> = pickDefined(g, [\\"devicesApprovalOn\\",\\"devicesKeyDurationDays\\"]);
        await apiRequest(g, \\"PATCH\\", expandPath(\\"/tailnet/{tailnet}/settings\\", g), { body });
        const result = await readRequired(g, expandPath(\\"/tailnet/{tailnet}/settings\\", g));
        const handle = await context.writeResource(\\"state\\", \\"current\\", result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: \\"Stop managing the tailnet settings; Tailscale keeps the current values\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        context.logger.warning(\\"Tailnet settings were left unchanged: deleting tailnet_settings only removes it from swamp. Change any setting you want reverted with update, or in the admin console.\\");
        const handle = await context.writeResource(\\"state\\", \\"current\\", { status: \\"unmanaged\\", deletedAt: new Date().toISOString() });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: \\"Refresh the tailnet settings from Tailscale\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const result = await readRequired(g, expandPath(\\"/tailnet/{tailnet}/settings\\", g));
        const handle = await context.writeResource(\\"state\\", \\"current\\", result);
        return { dataHandles: [handle] };
      },
    },
  },
};
"
`;

snapshot[`generateTailscaleExtensionModel - dns_split_nameservers 1`] = `
"// Auto-generated extension model for @swamp/tailscale/dns-split-nameservers
// Do not edit manually. Re-generate with: deno task generate:tailscale

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for a Tailscale split DNS nameservers.
 *
 * The nameservers used for one split-DNS domain. Each model manages a single
 * domain, so separate definitions can own separate domains. Deleting the model
 * removes that domain's nameservers. Do not combine dns_configuration with the
 * dns_nameservers, dns_preferences, dns_search_paths or dns_split_nameservers
 * models on the same tailnet: they manage the same settings and will overwrite
 * each other.
 *
 * Methods: \`create\`, \`get\`, \`update\`, \`delete\`, \`sync\`.
 *
 * @module
 */

import { z } from \\"npm:zod@4.3.6\\";
import { apiRequest, expandPath, instanceName, readRequired, requireArgs } from \\"./_lib/tailscale.ts\\";

const GlobalArgsSchema = z.object({
  domain: z.string().describe(\\"The split-DNS domain this model manages\\"),
  nameservers: z.array(z.string()).describe(\\"Nameservers that resolve the domain\\").optional(),
  apiKey: z.string().meta({ sensitive: true }).describe(\\"Tailscale API access token. Overrides the TAILSCALE_API_KEY environment variable. Wire with a vault.get(...) expression.\\").optional(),
  oauthClientId: z.string().describe(\\"OAuth client ID, used with oauthClientSecret instead of an API key. Overrides TAILSCALE_OAUTH_CLIENT_ID.\\").optional(),
  oauthClientSecret: z.string().meta({ sensitive: true }).describe(\\"OAuth client secret. Overrides TAILSCALE_OAUTH_CLIENT_SECRET. Wire with a vault.get(...) expression.\\").optional(),
  oauthScopes: z.array(z.string()).describe(\\"Scopes to request when exchanging the OAuth client credentials; defaults to all of the client's scopes.\\").optional(),
  tailnet: z.string().describe(\\"Tailnet ID. Defaults to TAILSCALE_TAILNET, then '-' (the tailnet of the credential in use).\\").optional(),
  baseUrl: z.string().describe(\\"Tailscale API base URL. Defaults to TAILSCALE_BASE_URL, then https://api.tailscale.com.\\").optional(),
});

const ResourceSchema = z.object({
  domain: z.string().optional(),
  nameservers: z.array(z.string()).optional(),
}).passthrough();

const InputsSchema = z.object({
  domain: z.string().optional(),
  nameservers: z.array(z.string()).optional(),
});

/** Swamp extension model for a Tailscale split DNS nameservers. Registered at \`@swamp/tailscale/dns-split-nameservers\`. */
export const model = {
  type: \\"@swamp/tailscale/dns-split-nameservers\\",
  version: \\"2026.01.01.1\\",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: \\"Split DNS nameservers state\\",
      schema: ResourceSchema,
      lifetime: \\"infinite\\",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: \\"Apply the split DNS nameservers from the global arguments\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"domain\\",\\"nameservers\\"], \\"create\\");
        await apiRequest(g, \\"PATCH\\", expandPath(\\"/tailnet/{tailnet}/dns/split-dns\\", g), { body: { [g.domain]: g.nameservers } });
        const data = await readRequired(g, expandPath(\\"/tailnet/{tailnet}/dns/split-dns\\", g));
        const result = { domain: g.domain, nameservers: (data[g.domain] as string[] | null | undefined) ?? [] };
        const handle = await context.writeResource(\\"state\\", instanceName(g.domain), result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: \\"Read the current split DNS nameservers into state\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"domain\\"], \\"get\\");
        const data = await readRequired(g, expandPath(\\"/tailnet/{tailnet}/dns/split-dns\\", g));
        const result = { domain: g.domain, nameservers: (data[g.domain] as string[] | null | undefined) ?? [] };
        const handle = await context.writeResource(\\"state\\", instanceName(g.domain), result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: \\"Apply the split DNS nameservers from the global arguments\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"domain\\",\\"nameservers\\"], \\"update\\");
        await apiRequest(g, \\"PATCH\\", expandPath(\\"/tailnet/{tailnet}/dns/split-dns\\", g), { body: { [g.domain]: g.nameservers } });
        const data = await readRequired(g, expandPath(\\"/tailnet/{tailnet}/dns/split-dns\\", g));
        const result = { domain: g.domain, nameservers: (data[g.domain] as string[] | null | undefined) ?? [] };
        const handle = await context.writeResource(\\"state\\", instanceName(g.domain), result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: \\"Clear the split DNS nameservers\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"domain\\"], \\"delete\\");
        await apiRequest(g, \\"PATCH\\", expandPath(\\"/tailnet/{tailnet}/dns/split-dns\\", g), { body: { [g.domain]: null } });
        const handle = await context.writeResource(\\"state\\", instanceName(g.domain), { status: \\"cleared\\", deletedAt: new Date().toISOString() });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: \\"Refresh the split DNS nameservers from Tailscale\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"domain\\"], \\"sync\\");
        const data = await readRequired(g, expandPath(\\"/tailnet/{tailnet}/dns/split-dns\\", g));
        const result = { domain: g.domain, nameservers: (data[g.domain] as string[] | null | undefined) ?? [] };
        const handle = await context.writeResource(\\"state\\", instanceName(g.domain), result);
        return { dataHandles: [handle] };
      },
    },
  },
};
"
`;

snapshot[`generateTailscaleExtensionModel - policy_file 1`] = `
"// Auto-generated extension model for @swamp/tailscale/policy-file
// Do not edit manually. Re-generate with: deno task generate:tailscale

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for a Tailscale policy file.
 *
 * The tailnet policy file (ACL), managed as HuJSON text. create refuses to
 * replace a policy file that has been edited since the tailnet was created
 * unless overwriteExistingContent is set; update refuses if the policy changed
 * since the last get or sync. Deleting the model leaves the policy as it is
 * unless resetOnDelete is set.
 *
 * Methods: \`create\`, \`get\`, \`update\`, \`delete\`, \`sync\`, \`preview\`, \`validate\`.
 *
 * @module
 */

import { z } from \\"npm:zod@4.3.6\\";
import { apiRequest, expandPath, instanceName, requireArgs, requireStored } from \\"./_lib/tailscale.ts\\";

const GlobalArgsSchema = z.object({
  policy: z.string().describe(\\"The policy file as HuJSON (JSON with comments and trailing commas)\\").optional(),
  overwriteExistingContent: z.boolean().describe(\\"Let create replace a policy file that has been edited since the tailnet was created\\").optional(),
  resetOnDelete: z.boolean().describe(\\"Reset the policy file to the default when the model is deleted\\").optional(),
  apiKey: z.string().meta({ sensitive: true }).describe(\\"Tailscale API access token. Overrides the TAILSCALE_API_KEY environment variable. Wire with a vault.get(...) expression.\\").optional(),
  oauthClientId: z.string().describe(\\"OAuth client ID, used with oauthClientSecret instead of an API key. Overrides TAILSCALE_OAUTH_CLIENT_ID.\\").optional(),
  oauthClientSecret: z.string().meta({ sensitive: true }).describe(\\"OAuth client secret. Overrides TAILSCALE_OAUTH_CLIENT_SECRET. Wire with a vault.get(...) expression.\\").optional(),
  oauthScopes: z.array(z.string()).describe(\\"Scopes to request when exchanging the OAuth client credentials; defaults to all of the client's scopes.\\").optional(),
  tailnet: z.string().describe(\\"Tailnet ID. Defaults to TAILSCALE_TAILNET, then '-' (the tailnet of the credential in use).\\").optional(),
  baseUrl: z.string().describe(\\"Tailscale API base URL. Defaults to TAILSCALE_BASE_URL, then https://api.tailscale.com.\\").optional(),
});

const ResourceSchema = z.object({
  policy: z.string().optional(),
  etag: z.string().optional(),
}).passthrough();

const InputsSchema = z.object({
  policy: z.string().optional(),
  overwriteExistingContent: z.boolean().optional(),
  resetOnDelete: z.boolean().optional(),
});

/** Swamp extension model for a Tailscale policy file. Registered at \`@swamp/tailscale/policy-file\`. */
export const model = {
  type: \\"@swamp/tailscale/policy-file\\",
  version: \\"2026.01.01.1\\",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: \\"Policy file state\\",
      schema: ResourceSchema,
      lifetime: \\"infinite\\",
      garbageCollection: 10,
    },
    result: {
      description: \\"The response of the most recent run of each action that returns data\\",
      schema: z.record(z.string(), z.unknown()),
      lifetime: \\"infinite\\",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: \\"Replace the policy file; refuses to overwrite an edited policy unless overwriteExistingContent is set\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"policy\\"], \\"create\\");
        // \\"ts-default\\" only matches a policy file nobody has edited yet.
        const resp = await apiRequest(g, \\"POST\\", expandPath(\\"/tailnet/{tailnet}/acl\\", g), { rawBody: g.policy, contentType: \\"application/hujson\\", headers: g.overwriteExistingContent ? {} : { \\"If-Match\\": '\\"ts-default\\"' }, allowStatus: [412] });
        if (resp.status === 412) {
          throw new Error(\\"The tailnet's policy file has been edited, so create will not replace it. Run get to adopt the current policy and then update, or set overwriteExistingContent to replace it.\\");
        }
        // Ask for HuJSON so comments and formatting survive.
        const read = await apiRequest(g, \\"GET\\", expandPath(\\"/tailnet/{tailnet}/acl\\", g), { accept: \\"application/hujson\\", raw: true });
        const result = { policy: String(read.data ?? \\"\\"), etag: read.headers.get(\\"ETag\\") ?? undefined };
        const handle = await context.writeResource(\\"state\\", \\"current\\", result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: \\"Read the current policy file into state\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        // Ask for HuJSON so comments and formatting survive.
        const read = await apiRequest(g, \\"GET\\", expandPath(\\"/tailnet/{tailnet}/acl\\", g), { accept: \\"application/hujson\\", raw: true });
        const result = { policy: String(read.data ?? \\"\\"), etag: read.headers.get(\\"ETag\\") ?? undefined };
        const handle = await context.writeResource(\\"state\\", \\"current\\", result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: \\"Replace the policy file; refuses if it changed since the last get or sync\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"policy\\"], \\"update\\");
        const stored = await requireStored(context, \\"current\\", \\"run create or get first\\");
        if (!stored.etag) throw new Error(\\"No ETag is stored for the policy file, so update cannot check it has not changed. Run get or sync first.\\");
        const resp = await apiRequest(g, \\"POST\\", expandPath(\\"/tailnet/{tailnet}/acl\\", g), { rawBody: g.policy, contentType: \\"application/hujson\\", headers: { \\"If-Match\\": String(stored.etag) }, allowStatus: [412] });
        if (resp.status === 412) {
          throw new Error(\\"The policy file changed since the last get or sync. Run sync, reconcile the changes into the policy argument, then update again.\\");
        }
        // Ask for HuJSON so comments and formatting survive.
        const read = await apiRequest(g, \\"GET\\", expandPath(\\"/tailnet/{tailnet}/acl\\", g), { accept: \\"application/hujson\\", raw: true });
        const result = { policy: String(read.data ?? \\"\\"), etag: read.headers.get(\\"ETag\\") ?? undefined };
        const handle = await context.writeResource(\\"state\\", \\"current\\", result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: \\"Stop managing the policy file; resets it to the default only when resetOnDelete is set\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        if (!g.resetOnDelete) {
          context.logger.warning(\\"The policy file was left unchanged: deleting policy_file only removes it from swamp. Set resetOnDelete to reset the policy to the default instead.\\");
          const handle = await context.writeResource(\\"state\\", \\"current\\", { status: \\"unmanaged\\", deletedAt: new Date().toISOString() });
          return { dataHandles: [handle] };
        }
        // An empty policy file resets the tailnet to the default policy.
        await apiRequest(g, \\"POST\\", expandPath(\\"/tailnet/{tailnet}/acl\\", g), { rawBody: \\"\\", contentType: \\"application/hujson\\" });
        const handle = await context.writeResource(\\"state\\", \\"current\\", { status: \\"reset\\", deletedAt: new Date().toISOString() });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: \\"Refresh the policy file from Tailscale\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        // Ask for HuJSON so comments and formatting survive.
        const read = await apiRequest(g, \\"GET\\", expandPath(\\"/tailnet/{tailnet}/acl\\", g), { accept: \\"application/hujson\\", raw: true });
        const result = { policy: String(read.data ?? \\"\\"), etag: read.headers.get(\\"ETag\\") ?? undefined };
        const handle = await context.writeResource(\\"state\\", \\"current\\", result);
        return { dataHandles: [handle] };
      },
    },
    preview: {
      description: \\"Preview which rules in the policy match a user or an IP:port\\",
      arguments: z.object({ type: z.enum([\\"user\\",\\"ipport\\"]).optional(), previewFor: z.string().optional() }),
      execute: async (args: { type?: string; previewFor?: string }, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"policy\\"], \\"preview\\");
        const resp = await apiRequest(g, \\"POST\\", expandPath(\\"/tailnet/{tailnet}/acl/preview\\", g), { rawBody: g.policy, contentType: \\"application/hujson\\", query: { type: args.type, previewFor: args.previewFor } });
        const data = resp.data && typeof resp.data === \\"object\\" && !Array.isArray(resp.data) ? resp.data as Record<string, unknown> : { value: resp.data ?? null };
        const handle = await context.writeResource(\\"result\\", instanceName(\`result-preview\`), data);
        return { dataHandles: [handle] };
      },
    },
    validate: {
      description: \\"Validate the policy and run its tests without saving it\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"policy\\"], \\"validate\\");
        const resp = await apiRequest(g, \\"POST\\", expandPath(\\"/tailnet/{tailnet}/acl/validate\\", g), { rawBody: g.policy, contentType: \\"application/hujson\\" });
        const data = resp.data && typeof resp.data === \\"object\\" && !Array.isArray(resp.data) ? resp.data as Record<string, unknown> : { value: resp.data ?? null };
        const handle = await context.writeResource(\\"result\\", instanceName(\`result-validate\`), data);
        return { dataHandles: [handle] };
      },
    },
  },
};
"
`;

snapshot[`generateTailscaleExtensionModel - device_tags 1`] = `
"// Auto-generated extension model for @swamp/tailscale/device-tags
// Do not edit manually. Re-generate with: deno task generate:tailscale

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for a Tailscale device tags.
 *
 * The ACL tags applied to a device. Deleting the model removes all tags from
 * the device. Only one model should manage this setting for a given device;
 * two models for the same device will overwrite each other.
 *
 * Methods: \`create\`, \`get\`, \`update\`, \`delete\`, \`sync\`.
 *
 * @module
 */

import { z } from \\"npm:zod@4.3.6\\";
import { apiRequest, expandPath, instanceName, pickDefined, readRequired, requireArgs } from \\"./_lib/tailscale.ts\\";

const GlobalArgsSchema = z.object({
  deviceId: z.string().describe(\\"The deviceId\\"),
  tags: z.array(z.string()).optional(),
  apiKey: z.string().meta({ sensitive: true }).describe(\\"Tailscale API access token. Overrides the TAILSCALE_API_KEY environment variable. Wire with a vault.get(...) expression.\\").optional(),
  oauthClientId: z.string().describe(\\"OAuth client ID, used with oauthClientSecret instead of an API key. Overrides TAILSCALE_OAUTH_CLIENT_ID.\\").optional(),
  oauthClientSecret: z.string().meta({ sensitive: true }).describe(\\"OAuth client secret. Overrides TAILSCALE_OAUTH_CLIENT_SECRET. Wire with a vault.get(...) expression.\\").optional(),
  oauthScopes: z.array(z.string()).describe(\\"Scopes to request when exchanging the OAuth client credentials; defaults to all of the client's scopes.\\").optional(),
  tailnet: z.string().describe(\\"Tailnet ID. Defaults to TAILSCALE_TAILNET, then '-' (the tailnet of the credential in use).\\").optional(),
  baseUrl: z.string().describe(\\"Tailscale API base URL. Defaults to TAILSCALE_BASE_URL, then https://api.tailscale.com.\\").optional(),
});

const ResourceSchema = z.object({
  tags: z.array(z.string()).optional(),
}).passthrough();

const InputsSchema = z.object({
  deviceId: z.string().optional(),
  tags: z.array(z.string()).optional(),
});

/** Swamp extension model for a Tailscale device tags. Registered at \`@swamp/tailscale/device-tags\`. */
export const model = {
  type: \\"@swamp/tailscale/device-tags\\",
  version: \\"2026.01.01.1\\",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: \\"Device tags state\\",
      schema: ResourceSchema,
      lifetime: \\"infinite\\",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: \\"Apply the device tags from the global arguments\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"deviceId\\",\\"tags\\"], \\"create\\");
        const body: Record<string, unknown> = pickDefined(g, [\\"tags\\"]);
        await apiRequest(g, \\"POST\\", expandPath(\\"/device/{deviceId}/tags\\", g, { deviceId: g.deviceId }), { body });
        const data = await readRequired(g, expandPath(\\"/device/{deviceId}\\", g, { deviceId: g.deviceId }), {\\"fields\\":\\"all\\"});
        const result = pickDefined(data, [\\"tags\\"]);
        const handle = await context.writeResource(\\"state\\", instanceName([g.deviceId].join(\\"-\\")), result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: \\"Read the current device tags into state\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"deviceId\\"], \\"get\\");
        const data = await readRequired(g, expandPath(\\"/device/{deviceId}\\", g, { deviceId: g.deviceId }), {\\"fields\\":\\"all\\"});
        const result = pickDefined(data, [\\"tags\\"]);
        const handle = await context.writeResource(\\"state\\", instanceName([g.deviceId].join(\\"-\\")), result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: \\"Apply the device tags from the global arguments\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"deviceId\\",\\"tags\\"], \\"update\\");
        const body: Record<string, unknown> = pickDefined(g, [\\"tags\\"]);
        await apiRequest(g, \\"POST\\", expandPath(\\"/device/{deviceId}/tags\\", g, { deviceId: g.deviceId }), { body });
        const data = await readRequired(g, expandPath(\\"/device/{deviceId}\\", g, { deviceId: g.deviceId }), {\\"fields\\":\\"all\\"});
        const result = pickDefined(data, [\\"tags\\"]);
        const handle = await context.writeResource(\\"state\\", instanceName([g.deviceId].join(\\"-\\")), result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: \\"Clear the device tags\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"deviceId\\"], \\"delete\\");
        await apiRequest(g, \\"POST\\", expandPath(\\"/device/{deviceId}/tags\\", g, { deviceId: g.deviceId }), { body: {\\"tags\\":[]} });
        const handle = await context.writeResource(\\"state\\", instanceName([g.deviceId].join(\\"-\\")), { status: \\"cleared\\", deletedAt: new Date().toISOString() });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: \\"Refresh the device tags from Tailscale\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        requireArgs(g, [\\"deviceId\\"], \\"sync\\");
        const data = await readRequired(g, expandPath(\\"/device/{deviceId}\\", g, { deviceId: g.deviceId }), {\\"fields\\":\\"all\\"});
        const result = pickDefined(data, [\\"tags\\"]);
        const handle = await context.writeResource(\\"state\\", instanceName([g.deviceId].join(\\"-\\")), result);
        return { dataHandles: [handle] };
      },
    },
  },
};
"
`;

snapshot[`generateTailscaleExtensionModel - device 1`] = `
"// Auto-generated extension model for @swamp/tailscale/device
// Do not edit manually. Re-generate with: deno task generate:tailscale

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for a Tailscale device.
 *
 * A device in the tailnet. Devices join through an auth key or sign-in, so
 * they cannot be created here: find them with list and adopt them by ID.
 * Manage tags, routes, key expiry and authorization with the device_tags,
 * device_subnet_routes, device_key and device_authorization models.
 *
 * Methods: \`get\`, \`delete\`, \`list\`, \`adopt\`, \`expire\`, \`set_name\`, \`set_ipv4_address\`.
 *
 * @module
 */

import { z } from \\"npm:zod@4.3.6\\";
import { apiRequest, expandPath, instanceName, pickDefined, readOptional, readRequired, unwrapList } from \\"./_lib/tailscale.ts\\";

const GlobalArgsSchema = z.object({
  apiKey: z.string().meta({ sensitive: true }).describe(\\"Tailscale API access token. Overrides the TAILSCALE_API_KEY environment variable. Wire with a vault.get(...) expression.\\").optional(),
  oauthClientId: z.string().describe(\\"OAuth client ID, used with oauthClientSecret instead of an API key. Overrides TAILSCALE_OAUTH_CLIENT_ID.\\").optional(),
  oauthClientSecret: z.string().meta({ sensitive: true }).describe(\\"OAuth client secret. Overrides TAILSCALE_OAUTH_CLIENT_SECRET. Wire with a vault.get(...) expression.\\").optional(),
  oauthScopes: z.array(z.string()).describe(\\"Scopes to request when exchanging the OAuth client credentials; defaults to all of the client's scopes.\\").optional(),
  tailnet: z.string().describe(\\"Tailnet ID. Defaults to TAILSCALE_TAILNET, then '-' (the tailnet of the credential in use).\\").optional(),
  baseUrl: z.string().describe(\\"Tailscale API base URL. Defaults to TAILSCALE_BASE_URL, then https://api.tailscale.com.\\").optional(),
});

const ResourceSchema = z.object({
  id: z.string().optional(),
  nodeId: z.string().optional(),
  name: z.string().optional(),
  tags: z.array(z.string()).optional(),
  keyExpiryDisabled: z.boolean().optional(),
  authorized: z.boolean().optional(),
}).passthrough();

const InputsSchema = z.object({
});

/** Swamp extension model for a Tailscale device. Registered at \`@swamp/tailscale/device\`. */
export const model = {
  type: \\"@swamp/tailscale/device\\",
  version: \\"2026.01.01.1\\",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: \\"Device state\\",
      schema: ResourceSchema,
      lifetime: \\"infinite\\",
      garbageCollection: 10,
    },
  },
  methods: {
    get: {
      description: \\"Get a device by ID\\",
      arguments: z.object({ id: z.string().describe(\\"The device's ID\\") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        const result = await readRequired(g, expandPath(\\"/device/{deviceId}\\", g, { deviceId: args.id }), {\\"fields\\":\\"all\\"});
        const handle = await context.writeResource(\\"state\\", instanceName(result.nodeId ?? args.id, \\"unknown\\"), result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: \\"Delete the device from the tailnet\\",
      arguments: z.object({ id: z.string().describe(\\"The device's ID\\") }),
      execute: async (args: { id: string }, context: any) => {
        const g = context.globalArgs;
        // Read first so the record lands on the instance get, adopt and list wrote.
        const current = await readOptional(g, expandPath(\\"/device/{deviceId}\\", g, { deviceId: args.id }), {\\"fields\\":\\"all\\"});
        const resp = await apiRequest(g, \\"DELETE\\", expandPath(\\"/device/{deviceId}\\", g, { deviceId: args.id }), { allowStatus: [404] });
        const existed = resp.status !== 404;
        const handle = await context.writeResource(\\"state\\", instanceName(current?.nodeId ?? args.id), { nodeId: args.id, existed, status: existed ? \\"deleted\\" : \\"not_found\\", deletedAt: new Date().toISOString() });
        return { dataHandles: [handle] };
      },
    },
    list: {
      description: \\"List devices in the tailnet and write each to state\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const resp = await apiRequest(g, \\"GET\\", expandPath(\\"/tailnet/{tailnet}/devices\\", g), { query: {\\"fields\\":\\"all\\"} });
        const items = unwrapList(resp.data, \\"devices\\");
        const dataHandles: any[] = [];
        for (const item of items) {
          dataHandles.push(await context.writeResource(\\"state\\", instanceName(item.nodeId ?? item.nodeId ?? \\"unknown\\", \\"unknown\\"), item));
        }
        return { dataHandles };
      },
    },
    adopt: {
      description: \\"Adopt an existing device by ID into managed state\\",
      arguments: z.object({ id: z.string().describe(\\"The ID of the device to adopt\\"), expected_name: z.string().describe(\\"Expected name, checked before adopting\\").optional() }),
      execute: async (args: { id: string; expected_name?: string }, context: any) => {
        const g = context.globalArgs;
        const result = await readRequired(g, expandPath(\\"/device/{deviceId}\\", g, { deviceId: args.id }), {\\"fields\\":\\"all\\"});
        if (args.expected_name !== undefined && result.name !== args.expected_name) {
          throw new Error(\`Identity mismatch: expected name=\${args.expected_name} but got \${result.name}\`);
        }
        const handle = await context.writeResource(\\"state\\", instanceName(result.nodeId ?? args.id, \\"unknown\\"), result);
        return { dataHandles: [handle] };
      },
    },
    expire: {
      description: \\"Expire the device's node key, forcing it to re-authenticate\\",
      arguments: z.object({ id: z.string().describe(\\"The device's ID\\") }),
      execute: async (args: { id?: string }, context: any) => {
        const g = context.globalArgs;
        const resp = await apiRequest(g, \\"POST\\", expandPath(\\"/device/{deviceId}/expire\\", g, { deviceId: args.id }));
        void resp;
        const result = await readRequired(g, expandPath(\\"/device/{deviceId}\\", g, { deviceId: args.id }), {\\"fields\\":\\"all\\"});
        const handle = await context.writeResource(\\"state\\", instanceName(result.nodeId ?? args.id, \\"unknown\\"), result);
        return { dataHandles: [handle] };
      },
    },
    set_name: {
      description: \\"Set the device's machine name\\",
      arguments: z.object({ id: z.string().describe(\\"The device's ID\\"), name: z.string() }),
      execute: async (args: { id?: string; name?: string }, context: any) => {
        const g = context.globalArgs;
        const resp = await apiRequest(g, \\"POST\\", expandPath(\\"/device/{deviceId}/name\\", g, { deviceId: args.id }), { body: pickDefined(args, [\\"name\\"]) });
        void resp;
        const result = await readRequired(g, expandPath(\\"/device/{deviceId}\\", g, { deviceId: args.id }), {\\"fields\\":\\"all\\"});
        const handle = await context.writeResource(\\"state\\", instanceName(result.nodeId ?? args.id, \\"unknown\\"), result);
        return { dataHandles: [handle] };
      },
    },
    set_ipv4_address: {
      description: \\"Set the device's Tailscale IPv4 address\\",
      arguments: z.object({ id: z.string().describe(\\"The device's ID\\"), ipv4: z.string() }),
      execute: async (args: { id?: string; ipv4?: string }, context: any) => {
        const g = context.globalArgs;
        const resp = await apiRequest(g, \\"POST\\", expandPath(\\"/device/{deviceId}/ip\\", g, { deviceId: args.id }), { body: pickDefined(args, [\\"ipv4\\"]) });
        void resp;
        const result = await readRequired(g, expandPath(\\"/device/{deviceId}\\", g, { deviceId: args.id }), {\\"fields\\":\\"all\\"});
        const handle = await context.writeResource(\\"state\\", instanceName(result.nodeId ?? args.id, \\"unknown\\"), result);
        return { dataHandles: [handle] };
      },
    },
  },
};
"
`;
